Remove jdk8OrEarlier